Added support for lifecycle and other args to server
